...
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Játékosok Listája") },
                actions = {
                    TextButton(onClick = onLogout) {
                        Text("Kijelentkezés")
                    }
                }
            )
        },
        snackbarHost = {
            SnackbarHost(hostState = snackbarHostState)
...
                        showAddDialog = false
                        name = ""
                        age = ""
                        email = ""
                    }
                }, enabled = name.isNotBlank() && email.isNotBlank()) {
                    Text("Mentés")
                }
            },
            dismissButton = {
                TextButton(onClick = { showAddDialog = false }) { Text("Mégse") }
            },
            title = { Text("Új játékos hozzáadása") },
...
